[package]
name = "roargraph"
version = "0.1.0"
edition = "2024"

[dependencies]
hnsw-itu = { path = "../hnsw-itu", features = ["serde"] }

min-max-heap = "1.3.0"
ndarray = "0.15.6"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", features = ["static"] }
ordered-float = "5.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
rayon = "1.11.0"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
sprs = "0.11"
rand = { version = "0.10.0", features = ["thread_rng"] }